# mercy

./: .gitignore  Cargo.toml  README.md
examples/: add.rs  create_context.rs  states.rs  worker_states.rs
mercy-server-XPC/MercyServerXPC/: MercyServerXPC.h  MercyServerXPC.m
mercy-server-XPC/mercy-server.xcodeproj/: project.pbxproj
src/: alloc.rs  boxed.rs  context.rs  error.rs  header.rs  lib.rs  message.rs  rec.rs  string.rs  sync.rs  vec.rs  worker.rs
src/macros/: mod.rs
src/mapping/: mod.rs  unix.rs
src/pal/: mod.rs
src/pal/apple/: mod.rs  xpc.rs
src/pal/posix/: mod.rs  mutex.rs  server.rs  worker.rs
