[package]
name = "mercy"
version = "0.1.0"
edition = "2024"


[dependencies]
derivative = "2.2.0"
errno = "0.3.12"
libc = "0.2.173"
nix = "0.30.1"
num-traits = "0.2.19"
proc-macro2 = "1.0.106"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_bytes = "0.11"
similar = "2.7.0"
syn = { version = "2.0.116", features = ["full"] }
tracing = "0.1.41"

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1"
xpc-sys = "1.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
shared_memory = "0.12.4"

